--- a/package.json
+++ b/package.json
@@ -5,19 +5,33 @@
   "main": "main.js",
   "scripts": {
     "start": "npm run build && electron .",
-    "build": "webpack --mode development"
+    "build": "webpack --mode development",
+    "dev": "electron .",
+    "debug": "electron --enable-logging ."
   },
   "dependencies": {
-    "electron": "^25.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "axios": "^1.7.9",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.4.7",
+    "electron": "^25.9.8",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "babel-loader": "^9.1.2",
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6"
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
+    "path-browserify": "^1.0.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^4.10.0"
   }
-} 
+}
