--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
     "stream-browserify": "^3.0.0",
     "vm-browserify": "^1.1.2"
   },
